--- a/Accediendo-a-la-nube-con-iOS_Semana-2_clima2/Base.lproj/Main.storyboard
+++ b/Accediendo-a-la-nube-con-iOS_Semana-2_clima2/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Accediendo_a_la_nube_con_iOS_Semana_2_clima2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,47 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tmf-yI-r0Y">
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gfS-G6-zf1"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="E9y-zA-LDZ"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZh-TH-Atw" userLabel="Ciudad">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="fHt-kU-3GI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KH3-f6-FGf" userLabel="Temperatura">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Tmf-yI-r0Y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DBS-t3-q87"/>
+                            <constraint firstItem="KH3-f6-FGf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="F9U-gC-XPi"/>
+                            <constraint firstItem="OZh-TH-Atw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="68" id="URT-Pz-2fF"/>
+                            <constraint firstItem="OZh-TH-Atw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="hUd-mB-z3q"/>
+                            <constraint firstItem="Tmf-yI-r0Y" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="mVj-GV-3rK"/>
+                            <constraint firstItem="Tmf-yI-r0Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oBh-YS-tfh"/>
+                            <constraint firstItem="KH3-f6-FGf" firstAttribute="leading" secondItem="OZh-TH-Atw" secondAttribute="trailing" constant="43" id="qhZ-Z2-CaJ"/>
+                            <constraint firstItem="OZh-TH-Atw" firstAttribute="baseline" secondItem="KH3-f6-FGf" secondAttribute="baseline" id="ysa-PQ-6Tf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ciudad" destination="OZh-TH-Atw" id="n9u-qa-521"/>
+                        <outlet property="temperatura" destination="KH3-f6-FGf" id="blL-0z-Y7a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
